# cirrus

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CircularBuffer.h  Constants.h  Decls.h  ErrorSparseTask.cpp  InputReader.cpp  InputReader.h  LRModel.cpp  LoadingNetflixTask.cpp  LoadingSparseTaskS3.cpp  LogisticSparseTaskS3.cpp  MFModel.h  MFNetflixTask.cpp  Makefile.am  Matrix.h  MlUtils.h  Model.cpp  Model.h  ModelGradient.h  PSSparseServerInterface.cpp  PSSparseServerTask.cpp  PSSparseServerTaskTest.cpp  PerformanceLambdaTask.cpp  ProgressMonitor.cpp  ProgressMonitor.h  README.md  Redis.cpp  S3.h  S3SparseIterator.cpp  S3SparseIterator.h  SoftmaxModel.cpp  SparseDataset.h  SparseLRModel.cpp  SparseLRModel.h  SparseMFModel.h  Synchronization.cpp  Synchronization.h  (+9 more)
.travis/: change-git-clang-format-output.sh  check-git-clang-format-output.sh  check_correctness_cirrus_sgd.cpp
benchmark_redis/: .gitignore  Makefile  benchmark_redis.cpp
configs/: criteo_kaggle.cfg  hosts  jester.cfg  netflix.cfg  test_config.cfg
python/: Untitled.ipynb  cirrus.py  ec2_vm.py  example.py  launch_instance_test.py  list_instances.py  test_vm_manager.py
python/driver/: driver.py
python/frontend/: Cirrus Collab Filtering Demo.ipynb  Cirrus Python Demo.ipynb  Cirrus Python Hyper Param demo Collab Filterng.ipynb  Cirrus Python Hyper Param demo.ipynb  D3 example.ipynb  cirrus.py  collab.py  ec2_vm.py  error_out  example.py  example_cf.py  example_lr.py  instance_status.py  test_vm_manager.py
python/frontend/.ipynb_checkpoints/: Cirrus Python Demo-checkpoint.ipynb  Cirrus Python Hyper Param demo-checkpoint.ipynb  D3 example-checkpoint.ipynb
python/frontend/cirrus/: .gitignore  instructions_for_testing.txt  machine_0.sh  preprocessing_test.py  pylintrc  requirements.txt  setup.py  testing.txt  testing_instructions.txt
python/frontend/cirrus/.pytest_cache/v/cache/: lastfailed  (+1 more)
python/frontend/cirrus/cirrus/: CirrusBundle.py  CostModel.py  FeatureHashing.py  GridSearch.py  HashingTrick.py  HyperParamDashDemo.ipynb  LambdaThread.py  MinMaxScaler.py  NormalScaler.py  Preprocessing.py  README.md  __init__.py  app.py  automate.py  benchmark_preprocessing.py  cf.py  cirrus_bundle.py  clients.py  configuration.py  constants.py  core.py  ec2_vm.py  feature_hashing.py  graph.py  handler.py  instance.py  lambda_thread.py  lr.py  machine_0.sh  machine_1.sh  machine_2.sh  messager.py  messenger.py  min_max_scaler.py  mock.py  normal_scaler.py  parameter_server.py  preprocessing.py  preprocessing_test.py  requirements.txt  (+6 more)
python/frontend/cirrus/cirrus.egg-info/: PKG-INFO
python/frontend/cirrus/cirrus/lambdas/: FeatureHashingHandler.py  HashingTrickHandler.py  MinMaxHandler.py  NormalHandler.py  deploy.sh  feature_hashing_helper.py  handler.py  lambda_utils.py  min_max_helper.py  normal_helper.py  setup.sh
python/frontend/cirrus/examples/: Cirrus Collab Filtering Demo.ipynb  Cirrus Python Demo.ipynb  Cirrus Python Hyper Param demo Collab Filterng.ipynb  Cirrus Python Hyper Param demo.ipynb  HyperParamDashDemo.ipynb  Risecamp demo.ipynb  UIExample.py  Untitled1.ipynb  bootstrap.py  build.ipynb  cirrus.csv  cirrus.py  collab.py  error_out_0  error_out_1  example_lr.py  huge_experiment.py  hyperparameter_optimization.ipynb  launch_test.py  logistic_regression.ipynb  loss_tmp  loss_tmp2  machine_0.sh  machine_1.sh  machine_2.sh  machine_3.sh  publish.ipynb  simple.py  test.sh  tmp
python/frontend/cirrus/scripts/: cirrus_setup
python/frontend/cirrus/tests/: benchmark_preprocessing.py  cirrus_test.py  context.py  preprocessing_test.py  test_handler.py  test_preprocessing.py
python/preprocessing/: MinMaxHandler.py  MinMaxScaler.py  NormalHandler.py  NormalScaler.py  aggregate.py  benchmark.py  deploy.sh  handler.py  preprocessing.py  requirements.txt  serialization.py  test.py
python/scripts/: delete_lambdas.py
scripts/: deployment.py  kill_local_ps.sh  load_data_aws.sh  run.sh
src/: AdaGrad.cpp  AdaGrad.h  Checksum.cpp  Checksum.h  CircularBuffer.h  Configuration.cpp  Configuration.h  Constants.h  CriteoCsvToLibSVM.cpp  Dataset.cpp  Dataset.h  Decls.h  ErrorSparseTask.cpp  InputReader.cpp  InputReader.h  LRModel.h  LoadingNetflixTask.cpp  LoadingSparseTaskS3.cpp  LogisticSparseTaskS3.cpp  MFModel.cpp  MFModel.h  MFNetflixTask.cpp  Makefile.am  Makefile_ubuntu.am  Matrix.cpp  Matrix.h  MlUtils.cpp  MlUtils.h  Model.h  ModelGradient.cpp  ModelGradient.h  Momentum.cpp  Momentum.h  MultiplePSSparseServerInterface.cpp  MultiplePSSparseServerInterface.h  MurmurHash3.cpp  Nesterov.cpp  Nesterov.h  OptimizationMethod.cpp  OptimizationMethod.h  (+41 more)
tests/: Makefile.am  redis_benchmark_lambdas.cpp  test_circular_buffer.cpp  two_clients_test.cpp
tests/iterator/: Makefile.am  criteo_libsvm.cfg  test_iterator.cpp  test_libsvm_iterator.cpp
tests/test_aws/: Makefile  test_aws.cpp
tests/test_data/: criteo.sh  jester.sh  jester_test.csv  parse-jester.py  simple-jester.py  small_test_criteo.sh
tests/test_iterator/: Makefile.am  test_iterator.cpp
tests/test_logistic_regression/: .gitignore  Makefile  check_correctness_cirrus_gd.cpp  check_correctness_cirrus_sgd.cpp  check_correctness_cirrus_sgd_rcv1.cpp  check_correctness_cirrus_sgd_s3.cpp  check_correctness_cirrus_sgd_sparse.cpp  criteo_aws_lambdas_s3.cfg  lr.py  lr_criteo.py  lr_criteo_sparse.py  run.sh
tests/test_mf/: Makefile  README  download.sh  parse_nf_dataset.py  test_mf.cpp  test_mf_threads.cpp
tests/test_redis/: .gitignore  Makefile  test_redis_incr.cpp  test_redis_pubsub.cpp
tests/test_s3/: .gitignore  Makefile.am  test_s3.cpp
tests/test_s3_redis/: Makefile  test_s3_redis.cpp
tests/test_travis/: ErrorSparseTask.cpp  Makefile.am  check_correctness_cirrus_sgd.cpp  error.cpp  ps_test.cpp  test.sh  test_keyvalue.cpp  test_keyvalue.sh  test_register.sh  test_register_worker.cpp  worker.cpp
tests/test_travis_lr/: Makefile.am  check_correctness_cirrus_sgd.cpp  error.cpp  ps_test.cpp  test.py  test.sh  test_register_worker.cpp  worker.cpp
tests/test_travis_mf/: Makefile.am  error_mf.cpp  ps_test_mf.cpp  test.py  test.sh  worker_mf.cpp
(+7 files in other folders)
